index page linking change

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             max-height: 80vh;
         }
     </style>
-    <link rel="stylesheet" href="/src/formboat.css" />
+    <link rel="stylesheet" href="src/formboat.css" />
 </head>
 
 <body>
     <h2 style="text-align:center;">FormBotJS Demo</h2>
     <div id="chat-form-container"></div>
-    <script src="/src/formboat.js"></script>
+    <script src="src/formboat.js"></script>
     <script>
         setTimeout(() => {
             // Example usage
