--- a/index.html
+++ b/index.html
@@ -1,82 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <title>FormBotJS Demo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f5f7fa;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        #chat-form-container{
-            max-height: 80vh;
-        }
-    </style>
-    <link rel="stylesheet" href="src/formboat.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FormBotJS – Conversational Form Builder</title>
+
+  <!-- ✅ Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- ✅ Your component stylesheet -->
+  <link rel="stylesheet" href="src/formboat.css" />
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #eef2f3, #dfe9f3);
+      min-height: 100vh;
+      font-family: 'Poppins', sans-serif;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      background: var(--chat_color1, #0078ff);
+      color: white;
+      padding: 1.5rem 0;
+      text-align: center;
+    }
+    header h1 {
+      font-weight: 700;
+      font-size: 2rem;
+    }
+    header p {
+      margin: 0;
+      opacity: 0.9;
+    }
+    .hero-section {
+      text-align: center;
+      padding: 30px 15px;
+    }
+    .hero-section h2 {
+      font-size: 1.8rem;
+      font-weight: 600;
+    }
+    .btn-demo {
+      background: var(--chat_color1, #0078ff);
+      color: white;
+      border-radius: 50px;
+      padding: 12px 25px;
+      transition: all 0.3s ease;
+    }
+    .btn-demo:hover {
+      background: #0056cc;
+      color: white;
+    }
+    #chat-section {
+      display: none;
+      max-width: 600px;
+      margin: 20px auto;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #555;
+      background: #f9f9f9;
+      margin-top: auto;
+    }
+    footer a {
+      color: var(--chat_color1, #0078ff);
+      text-decoration: none;
+      font-weight: 500;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+    #chat-form-container{
+        height: 60vh;
+    }
+  </style>
 </head>
 
 <body>
-    <h2 style="text-align:center;">FormBotJS Demo</h2>
+  <header>
+    <h1>💬 FormBotJS</h1>
+    <p>Turn boring forms into fun conversations.</p>
+  </header>
+
+  <section class="hero-section">
+    <div class="container">
+      <h2>Create Conversational Forms in Seconds 🚀</h2>
+      <p class="mb-4">Easily collect user data using a chat-style form interface. 100% JS-based and developer friendly.</p>
+      <button class="btn btn-demo" id="startDemoBtn">Try Demo</button>
+    </div>
+  </section>
+
+  <section id="chat-section">
+    <p class="p-1 fst-italic">This form is only for demonstrat perpose we don't collect any data as endpoint is just for testing.</p>
     <div id="chat-form-container"></div>
-    <script src="src/formboat.js"></script>
-    <script>
-        setTimeout(() => {
-            // Example usage
-            const questions = [
-                {
-                    label: "👋 What’s your full name?",
-                    name: "name",
-                    type: "text",
-                    attrs: { required: true, minlength: 3 },
-                },
-                {
-                    label: "📧 What’s your email?",
-                    name: "email",
-                    type: "email",
-                    attrs: { required: true },
-                },
-                {
-                    label: "🎂 What’s your birthdate?",
-                    name: "dob",
-                    type: "date",
-                    attrs: { required: true },
-                },
-                {
-                    label: "🧍‍♂️ Select your gender:",
-                    name: "gender",
-                    type: "radio",
-                    options: ["Male", "Female", "Other"],
-                    attrs: { required: true },
-                },
-                {
-                    label: "Favourate subject:",
-                    name: "fav_sub",
-                    type: "multiselect",
-                    options: ["Math", "English", "Other"],
-                    attrs: { required: true },
-                },
-                {
-                    label: "📷 Upload your profile photo (max 2MB):",
-                    name: "photo",
-                    type: "file",
+  </section>
 
-                    attrs: { required: true, accept: "image/*", "data-maxsize": "2" },
-                },
-            ];
-            ChatForm.init({
-                chat_containerId: "chat-form-container",
-                post_url: "https://example.com/api/submit",
-                questions,
-                onComplete: (data) => console.log("Collected:", data),
-            });
-        }, 1000);
-    </script>
+  <footer>
+    <p>
+      Developed by <strong>Firoz Ansari</strong> |
+      <a href="https://github.com/connectwithfiroz/FormBotJS/" target="_blank">GitHub</a> |
+      <a href="https://www.linkedin.com/in/hifiroz/" target="_blank">LinkedIn</a> |
+      <a href="https://www.quizsagar.com/" target="_blank">QuizSagar</a> |
+      <a href="https://tadkazone.com/" target="_blank">TadkaZone</a>
+    </p>
+  </footer>
+
+  <!-- ✅ Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="src/formboat.js"></script>
+
+  <script>
+    document.getElementById('startDemoBtn').addEventListener('click', () => {
+      document.getElementById('chat-section').style.display = 'block';
+      document.getElementById('startDemoBtn').style.display = 'none';
+
+      const questions = [
+        {
+          label: "👋 What’s your full name?",
+          name: "name",
+          type: "text",
+          attrs: { required: true, minlength: 3, placeholder: "e.g., Raju" },
+        },
+        {
+          label: "📧 What’s your email?",
+          name: "email",
+          type: "email",
+          attrs: { required: true, placeholder: "e.g., raju@xyz.com" },
+        },
+        {
+          label: "🎂 What’s your birthdate?",
+          name: "dob",
+          type: "date",
+          attrs: { required: true },
+        },
+        {
+          label: "🧍‍♂️ Select your gender:",
+          name: "gender",
+          type: "radio",
+          options: ["Male", "Female", "Other"],
+          attrs: { required: true },
+        },
+        {
+          label: "📚 Favorite subjects:",
+          name: "fav_sub",
+          type: "multiselect",
+          options: ["Math", "English", "Science"],
+          attrs: { required: true },
+        },
+        {
+          label: "📷 Upload your profile photo (max 2MB):",
+          name: "photo",
+          type: "file",
+          attrs: { required: true, accept: "image/*", "data-maxsize": "2" },
+        },
+      ];
+
+      FormBoat.init({
+        color1: "#28a745",
+        chat_containerId: "chat-form-container",
+        post_url: "https://your_endpoint.com/api/submit",
+        questions,
+        onComplete: (data) => console.log("Collected:", data),
+      });
+    });
+  </script>
 </body>
-
 </html>
