--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- ✅ Your component stylesheet -->
-  <link rel="stylesheet" href="src/formboat.css" />
+  <link rel="stylesheet" href="src/formbot.css" />
 
   <style>
     body {
@@ -196,7 +196,8 @@
 
   <!-- ✅ Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="src/formboat.js"></script>
+  <!-- <script src="src/formbot.js"></script> -->
+  <script src="src/formbot.min.js"></script>
 
   <script>
     document.getElementById('startDemoBtn').addEventListener('click', () => {
@@ -244,7 +245,7 @@
         },
       ];
 
-      FormBoat.init({
+      FormBot.init({
         color1: "#28a745",
         chat_containerId: "chat-form-container",
         post_url: "https://your_endpoint.com/api/submit",
