--- a/index.html
+++ b/index.html
@@ -4,14 +4,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FormBotJS – Conversational Form Builder</title>
 
-  <!-- ✅ Bootstrap -->
+  <title>FormBotJS – Conversational Form Builder for Websites</title>
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description"
+    content="FormBotJS is a lightweight JavaScript conversational form builder that makes data collection interactive and user-friendly. Easily embed it with a few lines of code and collect form data in chat style." />
+  <meta name="keywords"
+    content="FormBotJS, conversational form, form builder, chat form, JavaScript form, HTML form chatbot, interactive form, bootstrap chat form, formbot js, tutizo formbot" />
+  <meta name="author" content="Firoz Ansari" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="theme-color" content="#28a745" />
+
+  <!-- ✅ Open Graph / Social Meta Tags -->
+  <meta property="og:title" content="FormBotJS – Conversational Form Builder" />
+  <meta property="og:description"
+    content="Create beautiful, interactive chat-based forms for your website using FormBotJS. Easy setup. No dependencies." />
+  <meta property="og:url" content="https://formbotjs.tutizo.com/" />
+  <meta property="og:image" content="https://formbotjs.tutizo.com/assets/formbot-preview.png" />
+  <meta property="og:type" content="website" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FormBotJS – Conversational Form Builder" />
+  <meta name="twitter:description"
+    content="Make your web forms smarter and more engaging with FormBotJS – a lightweight chat-style form builder." />
+  <meta name="twitter:image" content="https://formbotjs.tutizo.com/assets/formbot-preview.png" />
+
+  <!-- ✅ Canonical URL -->
+  <link rel="canonical" href="https://formbotjs.tutizo.com/" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="https://formbotjs.tutizo.com/assets/favicon.ico" type="image/x-icon" />
+
+  <!-- ✅ Styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="src/formbot.min.css" />
   <!-- ✅ Your component stylesheet -->
-  <link rel="stylesheet" href="src/formbot.css" />
-
   <style>
     body {
       background: linear-gradient(135deg, #eef2f3, #dfe9f3);
