--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@ FormBot.init({
 
   <!-- ✅ Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="src/formbot.js"></script>
-  <!-- <script src="src/formbot.min.js"></script> -->
+  <!-- <script src="src/formbot.js"></script> -->
+  <script src="src/formbot.min.js"></script>
 
   <script>
     document.getElementById('startDemoBtn').addEventListener('click', () => {
