--- a/index.html
+++ b/index.html
@@ -42,92 +42,40 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="src/formbot.min.css" />
   <!-- ✅ Your component stylesheet -->
-  <style>
-    body {
-      background: linear-gradient(135deg, #eef2f3, #dfe9f3);
-      min-height: 100vh;
-      font-family: 'Poppins', sans-serif;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      background: var(--chat_color1, #0078ff);
-      color: white;
-      padding: 1.5rem 0;
-      text-align: center;
-    }
-
-    header h1 {
-      font-weight: 700;
-      font-size: 2rem;
-    }
-
-    header p {
-      margin: 0;
-      opacity: 0.9;
-    }
-
-    .hero-section {
-      text-align: center;
-      padding: 30px 15px;
-    }
-
-    .hero-section h2 {
-      font-size: 1.8rem;
-      font-weight: 600;
-    }
-
-    .btn-demo {
-      background: var(--chat_color1, #0078ff);
-      color: white;
-      border-radius: 50px;
-      padding: 12px 25px;
-      transition: all 0.3s ease;
-    }
-
-    .btn-demo:hover {
-      background: #0056cc;
-      color: white;
-    }
-
-    #chat-section {
-      display: none;
-      /* max-width: 600px; */
-      margin: 20px auto;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      color: #555;
-      background: #f9f9f9;
-      margin-top: auto;
-    }
-
-    footer a {
-      color: var(--chat_color1, #0078ff);
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    #chat-form-container {
-      height: 60vh;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/index.css" />
+  
 </head>
 
-<body>
-  <header>
-    <h1>💬 FormBotJS</h1>
-    <p>Turn boring forms into fun conversations.</p>
-  </header>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="70">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">💬 FormBotJS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#chat-section">Demo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#how_to_use">How to Use</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#docs-questions">Docs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#footer">Footer</a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </nav>
+
 
   <section class="hero-section">
     <div class="container">
@@ -214,7 +162,7 @@
   </section>
 
   <!-- how to use -->
-  <section class="container py-5">
+  <section class="container py-5" id="how_to_use">
     <div class="row align-items-center">
       <!-- LEFT SIDE -->
       <div class="col-md-5 mb-4 mb-md-0">
@@ -361,7 +309,7 @@ FormBot.init({
 
 
 
-  <footer>
+  <footer id="footer">
     <p>
       Developed by <a href="https://www.linkedin.com/in/hifiroz/" target="_blank"><strong>Firoz Ansari</strong></a> |
       <a href="https://github.com/connectwithfiroz/FormBotJS/" target="_blank">GitHub</a> |
