--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@ FormBot.init({
       <a href="https://github.com/connectwithfiroz/FormBotJS/" target="_blank">GitHub</a> |
       <a href="https://www.quizsagar.com/" target="_blank">QuizSagar</a> |
       <a href="https://tadkazone.com/" target="_blank">TadkaZone</a>
+      <a href="sitemap.xml" target="_blank">Sitemap</a>
     </p>
   </footer>
 
