--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ FormBot.init({
       Developed by <a href="https://www.linkedin.com/in/hifiroz/" target="_blank"><strong>Firoz Ansari</strong></a> |
       <a href="https://github.com/connectwithfiroz/FormBotJS/" target="_blank">GitHub</a> |
       <a href="https://www.quizsagar.com/" target="_blank">QuizSagar</a> |
-      <a href="https://tadkazone.com/" target="_blank">TadkaZone</a>
+      <a href="https://tadkazone.com/" target="_blank">TadkaZone</a> |
       <a href="sitemap.xml" target="_blank">Sitemap</a>
     </p>
   </footer>
